; ModuleID = '/home/carl/AnghaBench/mongoose/examples/MSP432/ccs/MSP432_MG_hello/extr_MSP_EXP432P401R.c_MSP_EXP432P401R_initWiFi.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/MSP432/ccs/MSP432_MG_hello/extr_MSP_EXP432P401R.c_MSP_EXP432P401R_initWiFi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPIO_PORT_P3 = common dso_local global i32 0, align 4
@GPIO_PIN0 = common dso_local global i32 0, align 4
@GPIO_PORT_P4 = common dso_local global i32 0, align 4
@GPIO_PIN1 = common dso_local global i32 0, align 4
@GPIO_PORT_P1 = common dso_local global i32 0, align 4
@GPIO_PIN5 = common dso_local global i32 0, align 4
@GPIO_PIN6 = common dso_local global i32 0, align 4
@GPIO_PRIMARY_MODULE_FUNCTION = common dso_local global i32 0, align 4
@GPIO_PIN7 = common dso_local global i32 0, align 4
@GPIO_PORT_P2 = common dso_local global i32 0, align 4
@GPIO_LOW_TO_HIGH_TRANSITION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MSP_EXP432P401R_initWiFi() #0 {
  %1 = load i32, i32* @GPIO_PORT_P3, align 4
  %2 = load i32, i32* @GPIO_PIN0, align 4
  %3 = call i32 @MAP_GPIO_setAsOutputPin(i32 %1, i32 %2)
  %4 = load i32, i32* @GPIO_PORT_P4, align 4
  %5 = load i32, i32* @GPIO_PIN1, align 4
  %6 = call i32 @MAP_GPIO_setAsOutputPin(i32 %4, i32 %5)
  %7 = load i32, i32* @GPIO_PORT_P3, align 4
  %8 = load i32, i32* @GPIO_PIN0, align 4
  %9 = call i32 @MAP_GPIO_setOutputHighOnPin(i32 %7, i32 %8)
  %10 = load i32, i32* @GPIO_PORT_P4, align 4
  %11 = load i32, i32* @GPIO_PIN1, align 4
  %12 = call i32 @MAP_GPIO_setOutputLowOnPin(i32 %10, i32 %11)
  %13 = load i32, i32* @GPIO_PORT_P1, align 4
  %14 = load i32, i32* @GPIO_PIN5, align 4
  %15 = load i32, i32* @GPIO_PIN6, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @GPIO_PRIMARY_MODULE_FUNCTION, align 4
  %18 = call i32 @MAP_GPIO_setAsPeripheralModuleFunctionOutputPin(i32 %13, i32 %16, i32 %17)
  %19 = load i32, i32* @GPIO_PORT_P1, align 4
  %20 = load i32, i32* @GPIO_PIN7, align 4
  %21 = load i32, i32* @GPIO_PRIMARY_MODULE_FUNCTION, align 4
  %22 = call i32 @MAP_GPIO_setAsPeripheralModuleFunctionInputPin(i32 %19, i32 %20, i32 %21)
  %23 = load i32, i32* @GPIO_PORT_P2, align 4
  %24 = load i32, i32* @GPIO_PIN5, align 4
  %25 = call i32 @MAP_GPIO_setAsInputPinWithPullDownResistor(i32 %23, i32 %24)
  %26 = load i32, i32* @GPIO_PORT_P2, align 4
  %27 = load i32, i32* @GPIO_PIN5, align 4
  %28 = load i32, i32* @GPIO_LOW_TO_HIGH_TRANSITION, align 4
  %29 = call i32 @MAP_GPIO_interruptEdgeSelect(i32 %26, i32 %27, i32 %28)
  %30 = call i32 (...) @MSP_EXP432P401R_initDMA()
  %31 = call i32 (...) @SPI_init()
  %32 = call i32 (...) @WiFi_init()
  ret void
}

declare dso_local i32 @MAP_GPIO_setAsOutputPin(i32, i32) #1

declare dso_local i32 @MAP_GPIO_setOutputHighOnPin(i32, i32) #1

declare dso_local i32 @MAP_GPIO_setOutputLowOnPin(i32, i32) #1

declare dso_local i32 @MAP_GPIO_setAsPeripheralModuleFunctionOutputPin(i32, i32, i32) #1

declare dso_local i32 @MAP_GPIO_setAsPeripheralModuleFunctionInputPin(i32, i32, i32) #1

declare dso_local i32 @MAP_GPIO_setAsInputPinWithPullDownResistor(i32, i32) #1

declare dso_local i32 @MAP_GPIO_interruptEdgeSelect(i32, i32, i32) #1

declare dso_local i32 @MSP_EXP432P401R_initDMA(...) #1

declare dso_local i32 @SPI_init(...) #1

declare dso_local i32 @WiFi_init(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
